--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -1,6 +1,18 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Drivo",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "dev" : "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "Biswo",
+  "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "nodemon": "^3.1.3"
   }
 }
