--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "browser-image-compression": "^2.0.2",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^7.3.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5"
