adding backend url

--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Drivo",
   "type": "module",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Biswo",
