--- a/CLIENT/vercel.json
+++ b/CLIENT/vercel.json
@@ -2,11 +2,11 @@
   "rewrites": [
     {
       "source": "/admin/:path*",
-      "destination": "/"
+      "destination": "/index.html"
     },
     {
       "source": "/:path*",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ]
 }
